2007-01-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-toolbar-icon-preferred-image-types)
	(w3m-toolbar-use-single-image-per-icon): New variables.
	(w3m-find-image): New function.
	(w3m-xmas-make-toolbar-buttons): Use it; add force argument.
	(w3m-setup-toolbar): Use it; add force and buffer arguments.
	(w3m-initialize-graphic-icons): Use it.

	* w3m-e21.el (w3m-toolbar-icon-preferred-image-types)
	(w3m-toolbar-use-single-image-per-icon): Apply customized value to
	tool bar immediately.
	(w3m-e21-make-toolbar-buttons, w3m-setup-toolbar): Add force arg.

2007-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* icons/*.png, icons30/*.png: New files.

	* Makefile.in (install-icons, install-icons30): Install png files.

	* w3mhack.el (w3mhack-nonunix-install, w3mhack-make-package):
	Install png files.
	(w3mhack-what-where): Update for png files.

	* w3m-e21.el (w3m-use-toolbar): Check whether tool-bar and
	gtk-version-string are available.
	(w3m-toolbar-icon-preferred-image-types)
	(w3m-toolbar-use-single-image-per-icon): New variables.
	(w3m-find-image): New function.
	(w3m-e21-make-toolbar-buttons, w3m-setup-toolbar)
	(w3m-initialize-graphic-icons): Use it.

2007-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Update index
	page and regexp for rss group.

2007-01-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-halfdump-command-arguments): Generate the right
	values for non-Mule XEmacs.

2007-01-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-content-end): Update.
	(shimbun-asahi-text-content-end): Update.
	(shimbun-asahi-group-table): Fix regexps for car.newcarbywebcg and
	culture groups.

	* w3m.el (w3m-message): Clear previous message first.  Suggested
	by David Hansen <david.hansen@gmx.net>.

2007-01-24  NOMIYA Masaru <nomiya@galaxy.dti.ne.jp>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Relax regexp
	for rss group.

2007-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>